Add basic HTML structure

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,3 +1,5 @@
 <main class="page__main">
-    
+    <label for="search">Buscar</label>
+    <input type="text" id="search">
+    <button class="button">Search</button>
 </main>
