Add fetch and paint li for each title

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -2,4 +2,7 @@
     <label for="search">Buscar</label>
     <input type="text" id="search">
     <button class="button">Search</button>
+    <ul class="list">
+        
+    </ul>
 </main>
