Add favorites function

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,8 +1,13 @@
 <main class="page__main">
-    <label for="search">Buscar</label>
-    <input type="text" id="search">
-    <button class="button">Search</button>
-    <ul class="list">
-        
-    </ul>
+    <section class="page__section-favorites">
+        <ul class="list-favorites">
+        </ul>
+    </section>
+    <section class="page__section-shows">
+        <label for="search">Buscar</label>
+        <input type="text" id="search">
+        <button class="button">Search</button>
+        <ul class="list-shows"> 
+        </ul>
+    </section>
 </main>
