--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -9,6 +9,11 @@ body {
 	color: white;
 }
 
-.show__item{
+.show__item, .favorites__item{
 	list-style: none;
+}
+
+.page__main{
+	display: flex;
+	justify-content: space-between;
 }
