--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,12 +1,13 @@
 <main class="page__main">
     <section class="page__section-favorites">
-        <ul class="list-favorites">
-        </ul>
-    </section>
-    <section class="page__section-shows">
+        <h2 class="page__section-favorites">Mis series favoritas</h2>
         <label for="search">Buscar</label>
         <input type="text" id="search">
         <button class="button">Search</button>
+        <ul class="list-favorites">
+        </ul>
+    </section>
+    <section class="page__section-shows"> 
         <ul class="list-shows"> 
         </ul>
     </section>
