Add scss variables

--- a/_src/assets/scss/core/_variables.scss
+++ b/_src/assets/scss/core/_variables.scss
@@ -1,1 +1,6 @@
-$color-white: #f3f4f5;
+$colorPrimary-100: #ffffff;
+$colorPrimary-400: #9c9c9c;
+$colorPrimary-700: #000000;
+
+$colorSecondary-400: #ffc7d1;
+$colorSecondary-700: #a10043;
