Complete cache functions and add first styles

--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -11,3 +11,17 @@
 	display: flex;
 	justify-content: space-between;
 }
+
+.label-search{
+	visibility: hidden;
+	position: absolute;
+	top: -1000;
+}
+#search{
+	border: none;
+	border-bottom: 2px solid $colorPrimary-400;
+	padding: 10px;
+}
+.page__title-favorites{
+	text-align: center;
+}
