--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,9 +1,9 @@
 <main class="page__main">
     <section class="page__section-favorites">
-        <h2 class="page__section-favorites">Mis series favoritas</h2>
-        <label for="search">Buscar</label>
+        <label for="search" class="label-search">Buscar</label>
         <input type="text" id="search">
-        <button class="button">Search</button>
+        <button class="button-search">Search</button>
+        <h2 class="page__title-favorites">Mis series favoritas</h2>
         <ul class="list-favorites">
         </ul>
     </section>
