--- a/_src/assets/scss/layout/_base.scss
+++ b/_src/assets/scss/layout/_base.scss
@@ -1,4 +1,17 @@
+html{
+    font-size: 16px;
+}
+
 body {
     background: $colorPrimary-100;
     color: $colorPrimary-700;
+    font-family: $fontPrimary;
+}
+
+button{
+    background-color: none;
+    font-size: 100%;
+    font-family: inherit;
+    border: none;
+    color: inherit;
 }
