--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -25,3 +25,14 @@
 .page__title-favorites{
 	text-align: center;
 }
+.non-favorites{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 30px;
+	background-color: $colorSecondary-400;
+	color: $colorSecondary-700;
+	font-size: 1.2rem;
+	font-weight: 700;
+	margin-bottom: 0;
+}
