--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,7 +1,8 @@
 @import 'core/variables';
 
 @import 'layout/base';
+@import 'layout/grid';
 @import 'layout/header';
-@import 'layout/main';
+@import 'layout/main-section';
 
 @import 'components/buttons';
