Add erase button

--- a/_src/assets/scss/components/_buttons.scss
+++ b/_src/assets/scss/components/_buttons.scss
@@ -4,3 +4,11 @@
     padding: 10px;
     font-weight: 700;
 }
+
+.button-erase{
+    background-color: $colorSecondary-400;
+    color: $colorPrimary-700;
+    padding: 10px;
+    font-weight: 700;
+    border-radius: 10px;
+}
