--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -4,6 +4,7 @@
         <input type="text" id="search">
         <button class="button-search">Search</button>
         <h2 class="page__title-favorites">Mis series favoritas</h2>
+        <button class="button-erase">Borrar favoritos</button>
         <ul class="list-favorites">
         </ul>
     </section>
