Begin favorites reset individual function

--- a/_src/assets/scss/components/_buttons.scss
+++ b/_src/assets/scss/components/_buttons.scss
@@ -12,3 +12,12 @@
     font-weight: 700;
     border-radius: 10px;
 }
+
+.button-item{
+    background-color: $colorSecondary-400;
+    border-radius: 50%;
+    font-size: 1rem;
+    font-weight: 700;
+    padding-bottom: 2px;
+    margin-right: 5px;
+}
