--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
-  <title>Evaluación</title>
+  <title>Buscador de series</title>
 </head>
 <body>
     <partial src="_header.html"></partial>
